# name: TestActionApi.test_listing_actions_is_not_nplus1
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.1
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organization"."available_features",
         "posthog_team"."access_control",
         "posthog_organizationmembership"."level"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  INNER JOIN "posthog_team" ON ("posthog_organization"."id" = "posthog_team"."organization_id")
  WHERE ("posthog_team"."id" = 2
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.10
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.11
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organization"."available_features",
         "posthog_team"."access_control",
         "posthog_organizationmembership"."level"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  INNER JOIN "posthog_team" ON ("posthog_organization"."id" = "posthog_team"."organization_id")
  WHERE ("posthog_team"."id" = 2
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.12
  '
  SELECT "posthog_organization"."available_features"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  ORDER BY "posthog_organization"."id" ASC
  LIMIT 1 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.13
  '
  SELECT "posthog_action"."id",
         "posthog_action"."name",
         "posthog_action"."team_id",
         "posthog_action"."description",
         "posthog_action"."created_at",
         "posthog_action"."created_by_id",
         "posthog_action"."deleted",
         "posthog_action"."post_to_slack",
         "posthog_action"."slack_message_format",
         "posthog_action"."is_calculating",
         "posthog_action"."updated_at",
         "posthog_action"."last_calculated_at",
         COUNT("posthog_action_events"."event_id") AS "count",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_action"
  LEFT OUTER JOIN "posthog_action_events" ON ("posthog_action"."id" = "posthog_action_events"."action_id")
  LEFT OUTER JOIN "posthog_user" ON ("posthog_action"."created_by_id" = "posthog_user"."id")
  WHERE ("posthog_action"."team_id" = 2
         AND NOT "posthog_action"."deleted"
         AND "posthog_action"."team_id" = 2)
  GROUP BY "posthog_action"."id",
           "posthog_user"."id"
  ORDER BY "posthog_action"."last_calculated_at" DESC,
           "posthog_action"."name" ASC /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.14
  '
  SELECT "posthog_actionstep"."id",
         "posthog_actionstep"."action_id",
         "posthog_actionstep"."tag_name",
         "posthog_actionstep"."text",
         "posthog_actionstep"."href",
         "posthog_actionstep"."selector",
         "posthog_actionstep"."url",
         "posthog_actionstep"."url_matching",
         "posthog_actionstep"."event",
         "posthog_actionstep"."properties",
         "posthog_actionstep"."name"
  FROM "posthog_actionstep"
  WHERE "posthog_actionstep"."action_id" IN (1,
                                             2,
                                             3,
                                             4,
                                             5 /* ... */)
  ORDER BY "posthog_actionstep"."id" ASC /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.15
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.2
  '
  SELECT "posthog_organization"."available_features"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  ORDER BY "posthog_organization"."id" ASC
  LIMIT 1 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.3
  '
  SELECT "posthog_action"."id",
         "posthog_action"."name",
         "posthog_action"."team_id",
         "posthog_action"."description",
         "posthog_action"."created_at",
         "posthog_action"."created_by_id",
         "posthog_action"."deleted",
         "posthog_action"."post_to_slack",
         "posthog_action"."slack_message_format",
         "posthog_action"."is_calculating",
         "posthog_action"."updated_at",
         "posthog_action"."last_calculated_at",
         COUNT("posthog_action_events"."event_id") AS "count",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_action"
  LEFT OUTER JOIN "posthog_action_events" ON ("posthog_action"."id" = "posthog_action_events"."action_id")
  LEFT OUTER JOIN "posthog_user" ON ("posthog_action"."created_by_id" = "posthog_user"."id")
  WHERE ("posthog_action"."team_id" = 2
         AND NOT "posthog_action"."deleted"
         AND "posthog_action"."team_id" = 2)
  GROUP BY "posthog_action"."id",
           "posthog_user"."id"
  ORDER BY "posthog_action"."last_calculated_at" DESC,
           "posthog_action"."name" ASC /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.4
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.5
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organization"."available_features",
         "posthog_team"."access_control",
         "posthog_organizationmembership"."level"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  INNER JOIN "posthog_team" ON ("posthog_organization"."id" = "posthog_team"."organization_id")
  WHERE ("posthog_team"."id" = 2
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.6
  '
  SELECT "posthog_organization"."available_features"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  ORDER BY "posthog_organization"."id" ASC
  LIMIT 1 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.7
  '
  SELECT "posthog_action"."id",
         "posthog_action"."name",
         "posthog_action"."team_id",
         "posthog_action"."description",
         "posthog_action"."created_at",
         "posthog_action"."created_by_id",
         "posthog_action"."deleted",
         "posthog_action"."post_to_slack",
         "posthog_action"."slack_message_format",
         "posthog_action"."is_calculating",
         "posthog_action"."updated_at",
         "posthog_action"."last_calculated_at",
         COUNT("posthog_action_events"."event_id") AS "count",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_action"
  LEFT OUTER JOIN "posthog_action_events" ON ("posthog_action"."id" = "posthog_action_events"."action_id")
  LEFT OUTER JOIN "posthog_user" ON ("posthog_action"."created_by_id" = "posthog_user"."id")
  WHERE ("posthog_action"."team_id" = 2
         AND NOT "posthog_action"."deleted"
         AND "posthog_action"."team_id" = 2)
  GROUP BY "posthog_action"."id",
           "posthog_user"."id"
  ORDER BY "posthog_action"."last_calculated_at" DESC,
           "posthog_action"."name" ASC /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.8
  '
  SELECT "posthog_actionstep"."id",
         "posthog_actionstep"."action_id",
         "posthog_actionstep"."tag_name",
         "posthog_actionstep"."text",
         "posthog_actionstep"."href",
         "posthog_actionstep"."selector",
         "posthog_actionstep"."url",
         "posthog_actionstep"."url_matching",
         "posthog_actionstep"."event",
         "posthog_actionstep"."properties",
         "posthog_actionstep"."name"
  FROM "posthog_actionstep"
  WHERE "posthog_actionstep"."action_id" IN (1,
                                             2,
                                             3,
                                             4,
                                             5 /* ... */)
  ORDER BY "posthog_actionstep"."id" ASC /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
# name: TestActionApi.test_listing_actions_is_not_nplus1.9
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='project_actions-list',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/actions/%3F%24'*/
  '
---
